<resources>
    <string name="app_name">DBpedia</string>
    <string name="loading">Loading…</string>
    <string name="action_settings">Settings</string>
    <string name="enter_url">Search or enter URL</string>
    <string name="title_activity_browse">DBpedia</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="date_of_death">Date of Death</string>
    <string name="unknown">unknown</string>
    <string name="clear">clear</string>
    <string name="recent">Recent</string>
    <string name="area">Area</string>
    <string name="population">Population</string>
    <string name="inhabitants">inhabitants</string>
    <string name="no_network_message">No internet access. Please check your network connection and try again.</string>
    <string name="not_found">The requested page was not found.</string>
    <string name="no_content">The requested page has no content.</string>
    <string name="agdistis" translatable="false">http://139.18.2.164:8080/AGDISTIS</string>
    <string name="title_activity_maps">Maps</string>
    <string name="search_something">Search something</string>
</resources>
