<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/birth_date_description_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/date_of_birth"
                android:visibility="gone" />

            <TextView
                android:id="@+id/birth_date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/unknown"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:visibility="gone" />

            <TextView
                android:id="@+id/death_date_description_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/date_of_death"
                android:visibility="gone" />

            <TextView
                android:id="@+id/death_date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/unknown"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:visibility="gone" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>