<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/inputEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/loadDataBtn"
                android:layout_toStartOf="@+id/loadDataBtn"
                android:hint="@string/enter_url"
                android:imeOptions="actionGo"
                android:minHeight="?actionBarSize"
                android:singleLine="true"
                android:text=""
                android:textColor="#fff"
                android:textColorHint="#77ffffff" />


            <ImageButton
                android:id="@+id/loadDataBtn"
                android:layout_width="?actionBarSize"
                android:layout_height="?actionBarSize"
                android:layout_alignBottom="@id/inputEditText"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"
                android:background="?selectableItemBackgroundBorderless"
                android:onClick="loadData"
                android:padding="8dp"
                android:src="@drawable/ic_arrow_forward"
                android:theme="@style/Theme.AppCompat"
                android:visibility="visible" />

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="?actionBarSize"
                android:layout_height="?actionBarSize"
                android:layout_alignBottom="@id/inputEditText"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:visibility="invisible" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.CardView
        android:id="@+id/card_search_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_margin="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:text="@string/recent"
                    android:textAllCaps="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/clear_recent"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:background="?selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:text="@string/clear"
                    android:textColor="?colorAccent" />
            </RelativeLayout>


            <ListView
                android:id="@+id/recent_search_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/search_something_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="164dp"
            android:layout_height="164dp"
            android:layout_gravity="center_horizontal"
            android:alpha="0.1"
            android:src="@drawable/ic_search" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:alpha="0.1"
            android:text="@string/search_something"
            android:textColor="#000"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>
